2004-07-19  Zoran Vasiljevic <vasiljevic@users.sf.net>

	* win/tclwinThrd.c: redefined MASTER_LOCK to call 
	TclpMasterLock. Fixes Bug #987967

2004-07-17  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclIOUtil.c: fix to rare 'cd' infinite loop in
	normalization with vfs [Bug 991420].
	* tests/fileSystem.test: added test for above bug.

	* doc/FileSystem.3: clarified documentation of posix error
	codes in 'remove directory' FS proc - 'EEXIST' is used to
	signify a non-empty directory error (bug reported against
	tclvfs).

2004-07-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in, unix/tcl.m4:     move (C|LD)FLAGS after their
	* unix/configure.in, unix/configure: _DEFAULT to allow for env
	setting to override m4 switches.  Move SC_MISSING_POSIX_HEADERS up
	and consolidate calls to limit redundancy in configure.
	(CFLAGS_WARNING): Remove -Wconversion
	(SC_ENABLE_THREADS): Set m4 to force threaded build when built
	against a threaded Tcl core.

2004-07-16  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIOCmd.c (Tcl_FcopyObjCmd): Corrected a typo in the
	  generation of error messages and simplified by reusing data in a
	  variable instead of retrieving the string again. Fixes [Tcl SF Bug 835289].

	* doc/OpenFileChnl.3: Added description of the behaviour of
	  Tcl_ReadChars when its 'charsToRead' argument is set to
	  -1. Fixes [Tcl SF Bug 934511].

	* doc/CrtCommand.3: Added note that the arguments given to the
	  command proc of a Tcl_CreateCommand are in utf8 since Tcl
	  8.1. Closing [Tcl SF Patch 414778].

	* doc/ChnlStack.3: Removed the declaration that the interp
	  argument to Tcl_(un)StackChannel can be NULL. This fixes [Tcl SF
	  Bug 881220], reported by Marco Maggi
	  <marcomaggi@users.sourceforge.net>.

	* tests/socket.test: Accepted two new testcases by Stuart Casoff
	  <stwo@users.sourceforge.net> checking that -server and -async
	  don't go together [Tcl SF Bug 796534].
